# RAG-Lite

./: .gitignore  README.md  pyproject.toml  pytest.ini
processing/: README.md  context_handler.py
processing/chunking/: base_chunker.py  chunker_controller.py  recursive_token_chunker.py  separators.py  text_splitter.py
rag_lite/: config.py
rag_lite/processing/: README.md  __init__.py  text_cleaner.py
rag_lite/processing/chunking/: chunker_controller.py  recursive_token_chunker.py  separators.py
rag_lite/src/core/: README.md  orchestrator.py
rag_lite/src/ingestion/: document_loader.py
rag_lite/src/retriever/: README.md  retriever.py
rag_lite/src/storage/: README.md  chroma_manager.py  embedder.py  storage_manager.py  vector_store.py
rag_lite/test/: test_chroma_manager.py  test_chunker.py  test_embedder.py  test_orchestator.py  test_retriever.py  test_storage_manager.py  test_text_document_loader.py  test_vectore_store.py
rag_lite/test/inputs/: mcp_manual.txt  text.docx  text.md  user_a_notes.txt
rag_lite/utils/: logger.py
src/core/: README.md  orchestrator.py
src/ingestion/: README.md  docs_loader.py  document_loader.py  markdown_parser.py  pdf_parser.py  txt_parser.py
src/retriever/: retriever.py
src/storage/: README.md  chroma_manager.py  embedder.py  storage_manager.py  vector_store.py
test/: test_chroma_manager.py  test_chunker.py  test_embedder.py  test_orchestator.py  test_retriever.py  test_storage_manager.py  test_text_document_loader.py  test_vectore_store.py
test/inputs/: text.odt  text.txt
utils/: logger.py
