[project]
name = "rag-lite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "dotenv>=0.9.9",
    "fastembed>=0.8.0",
    "odfpy>=1.4.1",
    "pypdf2>=3.0.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-docx>=1.2.0",
    "python-frontmatter>=1.1.0",
    "transformers>=5.4.0",
]
